cmake_minimum_required (VERSION 3.25)
#
#add_subdirectory (examples)
#
#find_package (Doxygen QUIET)
#
#if (NOT DOXYGEN_FOUND)
#  message (WARNING "Cannot build documentation - set BUILD_DOCS option to OFF to disable this warning")
#  return ()
#endif ()
#
#doxygen_add_docs (
#  libui_docs
#
#  "${CMAKE_SOURCE_DIR}/src/libui/common/"
#  "${CMAKE_SOURCE_DIR}/src/libui/darwin/"
#  "${CMAKE_SOURCE_DIR}/src/libui/include/"
#  "${CMAKE_SOURCE_DIR}/src/libui/unix/"
#  "${CMAKE_SOURCE_DIR}/src/libui/windows/"
#)
